[package]
name = "halo2-rsa"
version = "0.1.0"
edition = "2021"
authors = ["Sora Suegami"]
description = "RSA verification circuit in halo2."
license = "MIT"

[dependencies]
halo2-dynamic-sha256 = { git = "https://github.com/zkemail/halo2-dynamic-sha256.git", version = "0.1.0", branch = "main", optional = true }
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10.6"
rand = "0.8.5"
rsa = { version = "0.6.1", features = ["serde"] }
halo2-base = { branch = "community-edition", default-features = false, features = [
    "halo2-axiom",
    "display",
    "test-utils"
], git = "https://github.com/axiom-crypto/halo2-lib.git"}
halo2-ecc = { branch = "community-edition", default-features = false, features = [
    "halo2-axiom",
    "display"
], git = "https://github.com/axiom-crypto/halo2-lib.git"}
num-traits = "0.2.15"
env_logger = "0.10.0"
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.4"

[features]
default = ["halo2-axiom", "display"]
display = ["halo2-base/display"]
halo2-pse = ["halo2-base/halo2-pse"]
halo2-axiom = ["halo2-base/halo2-axiom"]
